feature: refactor - refactor -add SonarCube